--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3ON-TXLIm61_1w6sUu62AstQqIZu05IQ&callback=initMap&libraries=places&v=weekly" async defer></script>
+  
   </body>
 </html>
