--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pop</title>
     <link href="/fonts/fonts.css" rel="stylesheet" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3ON-TXLIm61_1w6sUu62AstQqIZu05IQ&callback=initMap&libraries=places&v=weekly"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3ON-TXLIm61_1w6sUu62AstQqIZu05IQ&types=(administrative_area_level_1)&callback=initMap&libraries=places&v=weekly"></script>
   </head>
   <body>
     <div id="app"></div>
