POP-36 add admin editor terms

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pop</title>
     <link href="/fonts/fonts.css" rel="stylesheet" />
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3ON-TXLIm61_1w6sUu62AstQqIZu05IQ&types=(administrative_area_level_1)&callback=initMap&libraries=places&v=weekly"></script>
   </head>
   <body>
